increase min-hieght 310px to resolve issue with first folio alignment

--- a/_sass/_shakespeare.scss
+++ b/_sass/_shakespeare.scss
@@ -214,7 +214,7 @@ strong {
   padding: 0px;
   margin-top: 0px;
   margin-bottom: 0px;
-  min-height: 300px;
+  min-height: 310px;
 }
 
 .first-folio-tour .first-folio-tour-graphic {
@@ -225,7 +225,7 @@ strong {
 }
 
 .first-folio-tour .card .card-image img {
-  min-height: 300px;
+  min-height: 310px;
 }
 
 .first-folio-tour .card .card-content {
